[package]
name = "web_server"
version = "0.1.1"
description = "Small and dependency-less crate for creating HTTP servers"
authors = ["Milesq <wmilosz88@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Milesq/web_server"
repository = "https://github.com/Milesq/web_server"
readme = "README.md"

[badges.travis-ci]
repository = "Milesq/web_server"
