[package]
name = "web_server"
version = "0.2.2"
description = "Small and dependency-less crate for creating HTTP servers"
authors = ["Milesq <wmilosz88@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Milesq/web_server"
repository = "https://github.com/Milesq/web_server"
readme = "README.md"

[badges.travis-ci]
repository = "Milesq/http_server"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-clippy"]
